--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,10 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-input[type='text'], input[type='email'], input[type='password'], input[type='tel'] {
-    @apply w-full px-4 py-2 border border-white bg-blue-400 text-white rounded-sm
+input[type='text'], input[type='email'], input[type='password'], input[type='tel'], inputinput[type='datetime-local'], button {
+    @apply w-full px-4 py-2 border border-white bg-blue-400 text-white 
+    placeholder-white rounded-sm !important
 }
 
-button {
-    @apply w-full px-4 py-2 border border-white bg-blue-400 text-white rounded-sm
-}
+/* button {
+    @apply w-full px-4 py-2 border border-white bg-blue-400 text-white placeholder:white rounded-sm
+} */
